--- a/package.json
+++ b/package.json
@@ -18,12 +18,9 @@
     "unit": "yarn workspaces foreach --all run unit"
   },
   "devDependencies": {
-    "husky": "^9.0.0",
-    "lint-staged": "^15.0.0",
-    "prettier": "^3.2.0"
+    "husky": "^9.0.0"
   },
   "resolutions": {
-    "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.0",
     "pdfjs-dist": "patch:pdfjs-dist@npm:4.3.136#.yarn/patches/pdfjs-dist-npm-4.3.136-35a0e70ced.patch"
   },
   "packageManager": "yarn@4.1.1"
